--- a/Latihan/Latihan 6/T6.css
+++ b/Latihan/Latihan 6/T6.css
@@ -32,7 +32,7 @@ Nav ul{
 }
 
 nav ul li a{
-    color: aqua;
+    color: white;
     text-decoration: none;
     font-size: 0,8em;
 }
@@ -117,7 +117,8 @@ transform-origin: 0 0;
     .menu-toggle{
         display: flex;
     }
-    nav ul{
+
+    nav ul {
     position: absolute;
     right: 0;
     top: 0;
@@ -126,13 +127,14 @@ transform-origin: 0 0;
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(182, 182, 206);
+    background-color: rgb(0, 17, 255);
     z-index: -1;
     transform: translateX(100%);
     transition: all 1s;
     opacity: 0;
 
     }
+    
     nav ul.slide{
         opacity: 1;
         transform: translateX(0);
